gcp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medicine-delivery
  labels:
    app: medicine-delivery
    environment: production
